// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConditionExpression renders with appliesTo, operator and value supplied 1`] = `
<div
  class="euiFlexGroup emotion-euiFlexGroup-responsive-m-flexStart-stretch-row"
>
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  >
    <div
      class="euiPopover emotion-euiPopover-inline-block"
      id="appliesToPopover"
    >
      <button
        class="euiExpression emotion-euiExpression-isClickable-success"
      >
        <span
          class="euiExpression__description emotion-euiExpression__description-success-isUppercase"
        >
          when
        </span>
         
        <span
          class="euiExpression__value emotion-euiExpression__value"
        >
          diff from typical
        </span>
      </button>
    </div>
  </div>
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  >
    <div
      class="euiPopover emotion-euiPopover-inline-block"
      id="operatorValuePopover"
    >
      <button
        class="euiExpression emotion-euiExpression-isClickable-success"
      >
        <span
          class="euiExpression__description emotion-euiExpression__description-success-isUppercase"
        >
          is greater than
        </span>
         
        <span
          class="euiExpression__value emotion-euiExpression__value"
        >
          123
        </span>
      </button>
    </div>
  </div>
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  >
    <button
      aria-label="Delete condition"
      class="euiButtonIcon emotion-euiButtonIcon-s-empty-danger"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="trash"
      />
    </button>
  </div>
</div>
`;

exports[`ConditionExpression renders with only value supplied 1`] = `
<div
  class="euiFlexGroup emotion-euiFlexGroup-responsive-m-flexStart-stretch-row"
>
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  >
    <div
      class="euiPopover emotion-euiPopover-inline-block"
      id="appliesToPopover"
    >
      <button
        class="euiExpression emotion-euiExpression-isClickable-success"
      >
        <span
          class="euiExpression__description emotion-euiExpression__description-success-isUppercase"
        >
          when
        </span>
         
        
      </button>
    </div>
  </div>
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  >
    <div
      class="euiPopover emotion-euiPopover-inline-block"
      id="operatorValuePopover"
    >
      <button
        class="euiExpression emotion-euiExpression-isClickable-success"
      >
        <span
          class="euiExpression__description emotion-euiExpression__description-success-isUppercase"
        >
          is 
        </span>
         
        <span
          class="euiExpression__value emotion-euiExpression__value"
        >
          123
        </span>
      </button>
    </div>
  </div>
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  >
    <button
      aria-label="Delete condition"
      class="euiButtonIcon emotion-euiButtonIcon-s-empty-danger"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="trash"
      />
    </button>
  </div>
</div>
`;
